# src/routes/cart.js
@@ -1,15 +1,16 @@
-import {Router} from 'express';
-import {CartController} from '../controllers';
-import {cart, addTocart} from '../middleware/index';
+import { addTocart, cart } from '../middleware/index';
 
-const router = Router ();
+import { CartController } from '../controllers';
+import { Router } from 'express';
 
-router.get ('/generateUniqueId', CartController.generateUniqueCartId);
-router.post ('/add', addTocart, CartController.add);
-router.get ('/:cart_id', CartController.getCart);
-router.put ('/update/:item_id', cart, CartController.update);
-router.delete ('/empty/:cart_id', CartController.empty);
-router.get ('/totalAmount/:cart_id', CartController.totalAmount);
-router.delete ('/removeProduct/:item_id', CartController.deleteItem);
+const router = Router();
+
+router.get('/generateUniqueId', CartController.generateUniqueCartId);
+router.post('/add', addTocart, CartController.add);
+router.get('/:cart_id', CartController.getCart);
+router.put('/update/:item_id', cart, CartController.update);
+router.delete('/empty/:cart_id', CartController.empty);
+router.get('/totalAmount/:cart_id', CartController.totalAmount);
+router.delete('/removeProduct/:item_id', CartController.deleteItem);
 
 export default router;
